overflow issues in styles.css

--- a/styles/style.css
+++ b/styles/style.css
@@ -13,8 +13,8 @@
 
 body{
     margin: 0 auto;
-    max-height: 100vh;
-    overflow: hidden;
+    min-height: 100vh;
+/*     overflow: hidden; */
     width: 100%;
     font-family: 'Montserrat', sans-serif;
     background-color: var(--bg-color);
